# atlas-sync

./: .gitignore  LICENSE  README.md
atlas-sync/: Cargo.toml  index.json
atlas-sync/src/: args_parser.rs  coordinator.rs  crdt.rs  crdt_index.rs  file.rs  fswrapper.rs  ignore_list.rs  item.rs  main.rs  p2p_network.rs  peer.rs  uuid_wrapper.rs  watcher.rs
atlas-sync/src/resources/test_watcher/: Untitled Document  amogus2  file8  index.json  my_fiiile  random_file.txt  random_file2.txt  test
atlas-sync/src/resources/test_watcher/another_folder/: test_valuwu.txt
atlas-sync/src/resources/test_watcher/random_directory/: nested_file.txt
atlas-sync/src/resources/test_watcher/watched/test_watcher/: random_file.txt
atlas_sync/: package-lock.json  package.json
atlas_sync/src-tauri/: tauri.conf.json
