[package]
name = "atlas-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.21"
notify = "7.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.11.0", features = ["v7"] }
walkdir = "2.5.0"
